tests/baselines/reference/objectRestReadonly(strict=true).errors.txt
objectRestReadonly.ts(16,8): error TS2790: The operand of a 'delete' operator must be optional.


==== objectRestReadonly.ts (1 errors) ====
    // #23734
    type ObjType = {
      foo: string
      baz: string
      quux: string
    }
    
    const obj: Readonly<ObjType> = {
      foo: 'bar',
      baz: 'qux',
      quux: 'quuz',
    }
    
    const { foo, ...rest } = obj
    
    delete rest.baz
           ~~~~~~~~
!!! error TS2790: The operand of a 'delete' operator must be optional.
    